Script in html, test 01

--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
     <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>-->
-    
+
+    <!--<script th:src="@{/webjars/jquery/jquery.min.js}"></script>-->
     <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <!--<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>-->
     <script th:src="@{/webjars/jquery-ui/jquery-ui.min.js}"></script>
