--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -67,7 +67,7 @@
   <br>
   <p id="errorfield" style="color: red"></p>
   
-  <div class="alert alert-info text-center" role="alert" id="output">
+  <div class="alert alert-info text-leftr" role="alert" id="output">
        OutPut here
   </div>
 </div>
